[workspace]

resolver = "2"

members = [
    "protocol-units/bridge/config",
    "protocol-units/bridge/setup",
    "protocol-units/execution/dof",
    "protocol-units/execution/opt-executor",
    "protocol-units/execution/fin-view",
    "protocol-units/execution/util",
    "protocol-units/da/m1/*",
    "protocol-units/sequencing/memseq/*",
    "protocol-units/mempool/*",
    "protocol-units/syncing/*",
    "protocol-units/settlement/mcr/client",
    "protocol-units/settlement/mcr/config",
    "protocol-units/settlement/mcr/manager",
    "protocol-units/settlement/mcr/setup",
    "protocol-units/settlement/mcr/runner",
    "protocol-units/movement-rest",
    "util/buildtime",
    "util/buildtime/buildtime-helpers",
    "util/buildtime/buildtime-macros",
    "util/commander",
    "util/dot-movement",
    "util/flocks",
    "util/godfig",
    "util/movement-algs",
    "util/movement-types",
    "util/tracing",
    "util/syncador",
    "networks/suzuka/*",
    "protocol-units/settlement/mcr/setup",
    "protocol-units/settlement/mcr/runner",
    "protocol-units/bridge/service",
    "protocol-units/bridge/grpc",
    "protocol-units/bridge/integration-tests",
    "protocol-units/settlement/mcr/runner",
    "benches/*",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Movement Labs"]
repository = "www.github.com/movementlabs/movement"
homepage = "www.homepage.com"
publish = false
rust-version = "1.75"

[workspace.dependencies]
# internal
## bridge
bridge-config = { path = "protocol-units/bridge/config" }
bridge-service = { path = "protocol-units/bridge/service" }
bridge-setup = { path = "protocol-units/bridge/setup" }
bridge-integration-tests = { path = "protocol-units/bridge/integration-tests" }
bridge-grpc = { path = "protocol-units/bridge/grpc" }
## buildtime
buildtime = { path = "util/buildtime" }
buildtime-helpers = { path = "util/buildtime/buildtime-helpers" }
buildtime-macros = { path = "util/buildtime/buildtime-macros" }
## da/m1
m1-da-light-node-client = { path = "protocol-units/da/m1/light-node-client" }
m1-da-light-node-grpc = { path = "protocol-units/da/m1/light-node-grpc" }
m1-da-light-node-util = { path = "protocol-units/da/m1/util" }
m1-da-light-node-setup = { path = "protocol-units/da/m1/setup" }
m1-da-light-node-verifier = { path = "protocol-units/da/m1/light-node-verifier" }
## execution
maptos-dof-execution = { path = "protocol-units/execution/dof" }
maptos-opt-executor = { path = "protocol-units/execution/opt-executor" }
maptos-fin-view = { path = "protocol-units/execution/fin-view" }
maptos-execution-util = { path = "protocol-units/execution/util" }
## infra
movement-rest = { path = "protocol-units/movement-rest" }
## mempool
mempool-util = { path = "protocol-units/mempool/util" }
move-rocks = { path = "protocol-units/mempool/move-rocks" }
## sequencing
memseq = { path = "protocol-units/sequencing/memseq/sequencer" }
memseq-util = { path = "protocol-units/sequencing/memseq/util" }
sequencing-util = { path = "protocol-units/sequencing/util" }
## settlement
mcr-settlement-client = { path = "protocol-units/settlement/mcr/client" }
mcr-settlement-config = { path = "protocol-units/settlement/mcr/config" }
mcr-settlement-manager = { path = "protocol-units/settlement/mcr/manager" }
mcr-settlement-setup = { path = "protocol-units/settlement/mcr/setup" }
## types
movement-algs = { path = "util/movement-algs" }
movement-types = { path = "util/movement-types" }
## dot movement
dot-movement = { path = "util/dot-movement" }
commander = { path = "util/commander" }
# networks
suzuka-config = { path = "networks/suzuka/suzuka-config" }
monza-config = { path = "networks/monza/monza-config" }
# util
flocks = { path = "util/flocks" }
godfig = { path = "util/godfig" }
movement-tracing = { path = "util/tracing" }
syncup = { path = "protocol-units/syncing/syncup" }
syncador = { path = "util/syncador" }

# Serialization and Deserialization
borsh = { version = "0.10" } # todo: internalize jmt and bump
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9.34"


# External Dependencies

## Aptos dependencies
### We use a forked version so that we can override dependency versions. This is required
### to be avoid dependency conflicts with other Sovereign Labs crates.
aptos-api = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-api-types = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-bitvec = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-block-executor = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-cached-packages = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-config = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-consensus-types = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-crypto = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e", features = [
    "cloneable-private-keys",
] }
aptos-db = { git = "https://github.com/movementlabsxyz/aptos-core.git", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-executor = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-executor-test-helpers = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-executor-types = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-faucet-core = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-framework = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-language-e2e-tests = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-mempool = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-proptest-helpers = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-sdk = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-state-view = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-storage-interface = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-temppath = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-types = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-vm = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-vm-genesis = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-vm-logging = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-vm-validator = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-logger = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-vm-types = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-indexer = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-indexer-grpc-fullnode = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-indexer-grpc-table-info = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }
aptos-protos = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "7a0e210fe29e2c81c378568eba2b467a7ef6a56e" }

# Indexer
processor = { git = "https://github.com/movementlabsxyz/aptos-indexer-processors", rev = "8e83cde3cb75fabdade9485e0af680cc4b73ca8e", subdir = "rust" }
server-framework = { git = "https://github.com/movementlabsxyz/aptos-indexer-processors", rev = "8e83cde3cb75fabdade9485e0af680cc4b73ca8e", subdir = "rust" }

bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
ethereum-types = "0.14.1"
ethers = "=2.0.10"
ethers-core = { version = "=2.0.10", default-features = false }
ethers-contract = "=2.0.10"
ethers-providers = { version = "=2.0.10", default-features = false }
ethers-signers = { version = "=2.0.10", default-features = false }
ethers-middleware = { version = "=2.0.10", default-features = false }
move-binary-format = { git = "https://github.com/diem/move" }
move-table-extension = { git = "https://github.com/diem/move" }
move-core-types = { git = "https://github.com/diem/move" }
### https://github.com/paradigmxyz/reth/tree/c0655fed8915490f82d4acf8900a16a10554cbfb
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", rev = "c0655fed8915490f82d4acf8900a16a10554cbfb" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "c0655fed8915490f82d4acf8900a16a10554cbfb", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "c0655fed8915490f82d4acf8900a16a10554cbfb" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "c0655fed8915490f82d4acf8900a16a10554cbfb" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", rev = "c0655fed8915490f82d4acf8900a16a10554cbfb" }
### Matches reth dependency. Using exact revision for matching our tightly coupled usage of both reth and revm crates
revm = { version = "8.0.0", default-features = false, features = ["serde"] }
### Used just to be safe about breaking changes
revm-primitives = { version = "=2.0.0", default-features = false }
secp256k1 = { version = "0.27", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

## Celestia Dependencies
celestia-rpc = { version = "0.3.0" }
celestia-types = { version = "0.3.0" }

alloy = { git = "https://github.com/alloy-rs/alloy.git", package = "alloy", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = [
    "node-bindings",
    "rpc-types-trace",
    "json-rpc",
    "json-abi",
    "rpc-client",
    "signers",
    "signer-yubihsm",
    "pubsub",
    "providers",
] }
alloy-rpc-types-eth = "0.1.3"
alloy-eips = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = [
    "ws",
] }
alloy-rlp = "0.3.5"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-sol-types = { version = "0.7.2", features = ["json"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }

anyhow = "1.0"
async-stream = "0.3.0"
async-trait = "0.1.71"
async-recursion = "1.1.1"
auto_impl = "1.2.0"
blake3 = { version = "1.4.0", features = ["traits-preview"] }
bytes = { version = "1.2.1", default-features = false }
chrono = "0.4.37"
clap = { version = "4.4.10", features = ["derive"] }
dashmap = "6.0.1"
delegate = "0.12.0"
derivative = "2.2.0"
derive_more = { version = "0.99.11", default-features = false }
derive-new = "0.6.0"
digest = "0.10"
dirs = "3.0.2"
fail = "0.5.1"
futures = "0.3.17"
hashbrown = "0.14.3"
hex = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "serde",
] }
ics23 = { version = "0.11.0" }
k256 = { version = "0.13.3" }
keccak-hash = "0.10.0"
itertools = { version = "0.12.1", default-features = false }
jmt = "0.9.0"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }
log = "0.4.21"
mirai-annotations = "1.10.1"
move-vm-integration-test-helpers = { path = "test-helpers/move-vm-integration-test-helpers" }
move-vm-ext = { path = "types/move-vm-ext" }
num-derive = "0.4.2"
num-traits = "0.2.14"
once_cell = "1.8.0"
parking_lot = { version = "0.12.1" }
poem = { version = "=1.3.59", features = ["anyhow", "rustls"] }
poem-openapi = { version = "=2.0.11", features = ["swagger-ui", "url"] }
prost = "0.12"
proptest = { version = "1.3.1", default-features = false, features = ["alloc"] }
proptest-derive = "0.4"
quote = "1.0"
rand = "0.7.3"
rand_core = "0.5.1"
rayon = "1.10.0"
reqwest = "0.12.4"
risc0-build = "0.20"
risc0-zkvm = { version = "0.21", features = ["std", "getrandom"] }
rocksdb = { version = "0.22.0", features = [
    "snappy",
    "lz4",
    "zstd",
    "zlib",
], default-features = false }
schemars = { version = "0.8.16", features = ["derive"] }
serde_with = "3.7.0"
sha2 = "0.10.8"
syn = "2.0"
tempfile = "3.5"
thiserror = "1.0.50"
tiny-keccak = "2.0"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-console = "0.1.0"
console-subscriber = "0.3.0"
tokio-stream = "0.1.15"
toml = "0.8"
tonic = "0.11"
tonic-build = { version = "0.11", features = ["prost"] }
tonic-reflection = "0.11"
tonic-web = "0.11"
### To try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
trie-db = "0.28.0"
url = "2.2.2"
x25519-dalek = "1.0.1"
zstd-sys = "2.0.9"
zstd = "0.13"
inotify = "0.10.2"
rustix = "0.38.34"
paste = "1.0.15"
uuid = { version = "1.10.0", features = ["v4"] }
tar = "0.4.41"
flate2 = "1.0.31"
blake-3 = "1.4.0"
regex = "1.10.6"
globset = "0.4.15"
glob = "0.3.1"

# trying to pin diesel
# diesel = "=2.1.1"
# migrations_internals = "=2.1.1"
num_cpus = "=1.16.0"
ahash = "=0.8.11"

aws-types = "1.3.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.42.0"

[workspace.lints.rust]
dead_code = "deny"        ## Alloy Dependencies
unused_imports = "deny"
non_ascii_idents = "deny" # Bad for readability and it can also be a security vulnerability

### In case you need inspiration for new lints to add to the list, this is a good
### reference: <https://github.com/EmbarkStudios/rust-ecosystem/blob/6783ae1573d62f3f5439b8ff9e04bec191ec2eaf/lints.toml>.
[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"

[profile.release.build-override]
opt-level = 3

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
zstd-sys = { git = "https://github.com/gyscos/zstd-rs.git", rev = "1779b385b42b08f958b767a37878dfa6a0b4f6a4" }
