[package]
name = "protocol-units"
version = "0.1.0"
edition = "2021"
description = "Protocol Units for the Movement SDK"

[[bin]]
name = "data-availability"
path = "data-availability/src/main.rs"

# ETH-ZK
[[bin]]
name = "eth-host"
path = "zkfp/eth-zk/host/src/main.rs"

[[bin]]
name = "eth-methods"
path = "zkfp/eth-zk/methods/src/main.rs"

[[bin]]
name = "eth-guest"
path = "zkfp/eth-zk/guest/src/main.rs"

#Move-ZK
[[bin]]
name = "move-host"
path = "zkfp/move-zk/host/src/main.rs"

[[bin]]
name = "move-methods"
path = "zkfp/move-zk/methods/src/main.rs"

[[bin]]
name = "move-guest"
path = "zkfp/move-zk/guest/src/main.rs"

[dependencies]
anyhow = "1.0"
risc0-zkvm = { version = "0.20.1",  features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.2.0"
serde = "1.0"

methods = { path = "../methods" }

# Move dependencies. 
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }
move-core-types = { workspace = true }
move-compiler = { workspace = true }
move-stdlib = { workspace = true }