[package]
name = "protocol-units"
version = "0.1.0"
edition = "2021"
description = "Protocol Units for the Movement SDK"

[lib]
name = "eth-settlement"
path = "eth-settlement/src/lib.rs"

[[bin]]
name = "eth-publisher"
path = "eth-publisher/src/bin/publisher.rs"

[[bin]]
name = "methods"
path = "methods/src/main.rs"

[[bin]]
name = "data-availability"
path = "data-availability/src/main.rs"

# [[bin]]
# name = "host"
# path = "zkfp/host/src/main.rs"

# [[bin]]
# name = "methods"
# path = "zkfp/methods/src/main.rs"

# [[bin]]
# name = "guest"
# path = "zkfp/guest/src/main.rs"

[dependencies]
anyhow = "1.0"
risc0-zkvm = { version = "0.20.1",  features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.2.0"
serde = "1.0"

methods = { path = "../methods" }

# Move dependencies. 
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }
move-core-types = { workspace = true }
move-compiler = { workspace = true }
move-stdlib = { workspace = true }